# iPod_Sync

./: README.md
electron-app/: CMakeLists.txt  README.md  addon.cpp  package-lock.json  package.json
electron-app/src/: preload.js  renderer.js
src/: index.html  main.js
